# python-project-50

./: README.md  pyproject.toml
scripts/: gendiff.py
