[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["spoddub <spodd98@gmail.com>"]
readme = "README.md"
packages = [{include = "scripts"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.scripts]
gendiff = "scripts.gendiff:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
